[tool.poetry]
name = "uema-health"
version = "0.1.0"
description = ""
authors = ["Uemak <kanzi1234567890@gmail.com>"]
readme = "README.md"
packages = [{include = "uema_health"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
